# opengl_template_project

./: CMakeLists.txt  README.md  main.cpp
include/: Application.h
include/core/: Window.h
include/events/: KeyEventHandler.h
include/examples/: DrawTriangleExample.h
src/: Application.cpp
src/core/: Window.cpp
src/events/: KeyEventHandler.cpp
